home page broken into 2 components and got like feature working with minimal bugs

--- a/fotograph-app/src/components/Home/Home.scss
+++ b/fotograph-app/src/components/Home/Home.scss
@@ -51,7 +51,7 @@
         margin-right: 10%;
         border-radius: 3px;
         position: relative;
-        top: 35px;
+        top: 170px;
         opacity: 0.8;
         z-index: 1;
         text-align: center;
